# AetherCore

aethercore-mcp/: pyproject.toml
aethercore-mcp/src/aethercore_mcp/: boundary.py  geometric_core.py  server.py
sentinel_hub/: main.py  requirements.txt
sentinel_hub/templates/: index.html
tools/: requirements.txt  scheduler.py
